[gd_scene load_steps=6 format=2]

[ext_resource path="res://content/weapons/obelisk/BarDark.png" type="Texture" id=1]
[ext_resource path="res://content/weapons/obelisk/Slidercsp.png" type="Texture" id=2]
[ext_resource path="res://content/weapons/obelisk/QuickReloadBound2.png" type="Texture" id=3]
[ext_resource path="res://content/weapons/obelisk/QuickReload.gd" type="Script" id=5]
[ext_resource path="res://content/weapons/obelisk/QuickReloadWindowSquash.png" type="Texture" id=7]

[node name="QuickReload" type="Node2D"]
script = ExtResource( 5 )

[node name="QuickReloadBar" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )

[node name="SliderSprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 2 )

[node name="MinBound" type="Sprite" parent="."]
position = Vector2( -11, -8 )
texture = ExtResource( 3 )
centered = false

[node name="QuickReloadWindowSquash" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="MaxBound" type="Sprite" parent="."]
position = Vector2( 6, 8 )
rotation = 3.14159
texture = ExtResource( 3 )
centered = false
